@@ -58,12 +58,6 @@ spec128_unattached_port( void )
   return spectrum_unattached_port( 3 );
 }
 
-libspectrum_byte
-spec128_read_screen_memory( libspectrum_word offset )
-{
-  return RAM[ memory_current_screen ][offset];
-}
-
 libspectrum_dword
 spec128_contend_port( libspectrum_word port )
 {
@@ -130,7 +124,6 @@ int spec128_init( fuse_machine_info *machine )
   error = machine_set_timings( machine ); if( error ) return error;
 
   machine->timex = 0;
-  machine->ram.read_screen	     = spec128_read_screen_memory;
   machine->ram.contend_port	     = spec128_contend_port;
   machine->ram.contend_delay	     = spec128_contend_delay;
 
