@@ -694,6 +694,8 @@
 	 specplus3.[ch],specplus3e.c}: Spectrum +3e support.
 20040402 machines/specplus3e.c: make the +3e be a +3e not a +3.
 20040402 tape.c: use libspectrum_tape_write().
+20040402 display,c,machine.c,machines/,memory.h,spectrum.c: remove use of
+	 the read_screen_memory function.
 20040403 widget/roms.c: Fix ROM name lookup for labels
 20040403 widget/select.c: Add <string.h> for strlen
 20040403 ui/sdl/sdldisplay.c: Fix icon overlays for timex machines
